--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
-paginate:            1
-baseurl:             ""
+title:               grosnick.tips
+tagline:             Le gourou dévoile ses secrets
+url:                 http://garytouet.com/
+paginate:            20
+baseurl:             /grosnick-tips
 
 # Assets
 #
@@ -17,9 +17,7 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Gros Nick
 
 # Custom vars
 version:             2.0.0
@@ -27,6 +25,6 @@ github:
   repo:              https://github.com/poole/poole
 
 # Gems
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-gist
