--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               grosnick.tips
-tagline:             Le gourou dévoile ses secrets
+tagline:             Le gourou se dévoile
 url:                 http://garytouet.com/
 paginate:            20
 baseurl:             /grosnick-tips
